[gd_scene load_steps=8 format=1]

[ext_resource path="res://maps/tilesets/coldhot-tileset.tres" type="TileSet" id=1]
[ext_resource path="res://maps/stage07/map.gd" type="Script" id=2]
[ext_resource path="res://enemies/enemy_ice.tscn" type="PackedScene" id=3]
[ext_resource path="res://utility/help_message.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/player/hero.tscn" type="PackedScene" id=5]
[ext_resource path="res://maps/portal.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 57.9355, 10 )

[node name="Map" type="TileMap"]

mode = 0
tile_set = ExtResource( 1 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -1179631, 11, -1179630, 10, -1179629, 12, -1179622, 11, -1179621, 10, -1179620, 12, -1179612, 11, -1179611, 10, -1179610, 12, -1114095, 9, -1114094, 0, -1114093, 8, -1114086, 9, -1114085, 0, -1114084, 8, -1114076, 9, -1114075, 0, -1114074, 8, -1048570, 11, -1048569, 10, -1048568, 10, -1048567, 10, -1048566, 10, -1048565, 10, -1048564, 10, -1048563, 10, -1048562, 10, -1048561, 10, -1048560, 10, -1048559, 6, -1048558, 0, -1048557, 5, -1048556, 10, -1048555, 10, -1048554, 10, -1048553, 10, -1048552, 10, -1048551, 10, -1048550, 6, -1048549, 0, -1048548, 5, -1048547, 10, -1048546, 10, -1048545, 10, -1048544, 10, -1048543, 10, -1048542, 10, -1048541, 10, -1048540, 6, -1048539, 0, -1048538, 5, -1048537, 10, -1048536, 10, -1048535, 10, -1048534, 10, -1048533, 12, -983034, 9, -983033, 0, -983032, 0, -983031, 0, -983030, 0, -983029, 0, -983028, 0, -983027, 0, -983026, 0, -983025, 0, -983024, 0, -983023, 0, -983022, 0, -983021, 0, -983020, 0, -983019, 0, -983018, 0, -983017, 0, -983016, 0, -983015, 0, -983014, 0, -983013, 0, -983012, 0, -983011, 0, -983010, 0, -983009, 0, -983008, 0, -983007, 0, -983006, 0, -983005, 0, -983004, 0, -983003, 0, -983002, 0, -983001, 0, -983000, 0, -982999, 0, -982998, 0, -982997, 5, -982996, 10, -982995, 12, -917500, 11, -917499, 10, -917498, 6, -917497, 0, -917496, 0, -917495, 0, -917494, 0, -917493, 0, -917492, 0, -917491, 0, -917490, 0, -917489, 0, -917488, 0, -917487, 0, -917486, 0, -917485, 0, -917484, 0, -917483, 0, -917482, 0, -917481, 0, -917480, 0, -917479, 0, -917478, 0, -917477, 0, -917476, 0, -917475, 0, -917474, 0, -917473, 0, -917472, 0, -917471, 0, -917470, 0, -917469, 0, -917468, 0, -917467, 0, -917466, 0, -917465, 0, -917464, 0, -917463, 0, -917462, 0, -917461, 0, -917460, 0, -917459, 8, -851964, 9, -851963, 0, -851962, 0, -851961, 0, -851960, 0, -851959, 0, -851958, 0, -851957, 0, -851956, 0, -851955, 0, -851954, 0, -851953, 0, -851952, 0, -851951, 0, -851950, 0, -851949, 0, -851948, 0, -851947, 0, -851946, 0, -851945, 0, -851944, 0, -851943, 0, -851942, 0, -851941, 0, -851940, 0, -851939, 0, -851938, 0, -851937, 0, -851936, 0, -851935, 0, -851934, 0, -851933, 0, -851932, 0, -851931, 0, -851930, 0, -851929, 0, -851928, 0, -851927, 0, -851926, 0, -851925, 3, -851924, 7, -851923, 14, -786428, 13, -786427, 7, -786426, 4, -786425, 0, -786424, 0, -786423, 0, -786422, 3, -786421, 4, -786420, 0, -786419, 3, -786418, 7, -786417, 7, -786416, 7, -786415, 7, -786414, 7, -786413, 7, -786412, 7, -786411, 7, -786410, 4, -786409, 0, -786408, 3, -786407, 7, -786406, 7, -786405, 7, -786404, 7, -786403, 7, -786402, 7, -786401, 4, -786400, 0, -786399, 3, -786398, 7, -786397, 7, -786396, 7, -786395, 7, -786394, 4, -786393, 0, -786392, 0, -786391, 0, -786390, 0, -786389, 8, -720890, 9, -720889, 0, -720888, 0, -720887, 0, -720886, 8, -720885, 9, -720884, 0, -720883, 8, -720874, 9, -720873, 0, -720872, 8, -720865, 9, -720864, 0, -720863, 8, -720860, 11, -720859, 10, -720858, 6, -720857, 0, -720856, 0, -720855, 0, -720854, 0, -720853, 8, -655354, 9, -655353, 0, -655352, 0, -655351, 0, -655350, 8, -655349, 13, -655348, 7, -655347, 14, -655338, 13, -655337, 7, -655336, 14, -655329, 13, -655328, 7, -655327, 14, -655324, 9, -655323, 0, -655322, 0, -655321, 0, -655320, 0, -655319, 0, -655318, 0, -655317, 8, -589818, 9, -589817, 0, -589816, 0, -589815, 0, -589814, 8, -589788, 13, -589787, 7, -589786, 4, -589785, 0, -589784, 0, -589783, 0, -589782, 0, -589781, 8, -524282, 9, -524281, 0, -524280, 0, -524279, 0, -524278, 8, -524250, 9, -524249, 0, -524248, 0, -524247, 0, -524246, 0, -524245, 5, -524244, 10, -524243, 12, -458748, 11, -458747, 10, -458746, 6, -458745, 0, -458744, 0, -458743, 0, -458742, 8, -458714, 9, -458713, 0, -458712, 0, -458711, 0, -458710, 0, -458709, 0, -458708, 0, -458707, 8, -393212, 9, -393211, 0, -393210, 0, -393209, 0, -393208, 0, -393207, 0, -393206, 8, -393178, 9, -393177, 0, -393176, 0, -393175, 0, -393174, 0, -393173, 3, -393172, 7, -393171, 14, -327676, 13, -327675, 7, -327674, 4, -327673, 0, -327672, 0, -327671, 0, -327670, 8, -327642, 9, -327641, 0, -327640, 0, -327639, 0, -327638, 0, -327637, 8, -262138, 9, -262137, 0, -262136, 0, -262135, 0, -262134, 8, -262106, 9, -262105, 0, -262104, 0, -262103, 0, -262102, 0, -262101, 8, -196602, 9, -196601, 0, -196600, 0, -196599, 0, -196598, 8, -196572, 11, -196571, 10, -196570, 6, -196569, 0, -196568, 0, -196567, 0, -196566, 0, -196565, 8, -131066, 9, -131065, 0, -131064, 0, -131063, 0, -131062, 8, -131036, 9, -131035, 0, -131034, 0, -131033, 0, -131032, 0, -131031, 0, -131030, 0, -131029, 8, -65530, 9, -65529, 0, -65528, 0, -65527, 0, -65526, 8, -65500, 13, -65499, 7, -65498, 4, -65497, 0, -65496, 0, -65495, 0, -65494, 0, -65493, 8, 6, 9, 7, 0, 8, 0, 9, 0, 10, 8, 38, 9, 39, 0, 40, 0, 41, 0, 42, 0, 43, 8, 65542, 9, 65543, 0, 65544, 0, 65545, 0, 65546, 5, 65547, 10, 65548, 12, 65574, 9, 65575, 0, 65576, 0, 65577, 0, 65578, 0, 65579, 8, 131078, 9, 131079, 0, 131080, 0, 131081, 0, 131082, 0, 131083, 0, 131084, 8, 131110, 9, 131111, 0, 131112, 0, 131113, 0, 131114, 0, 131115, 5, 131116, 10, 131117, 12, 196614, 9, 196615, 0, 196616, 0, 196617, 0, 196618, 3, 196619, 7, 196620, 14, 196646, 9, 196647, 0, 196648, 0, 196649, 0, 196650, 0, 196651, 0, 196652, 0, 196653, 8, 262150, 9, 262151, 0, 262152, 0, 262153, 0, 262154, 8, 262182, 9, 262183, 0, 262184, 0, 262185, 0, 262186, 0, 262187, 3, 262188, 7, 262189, 14, 327684, 11, 327685, 10, 327686, 6, 327687, 0, 327688, 0, 327689, 0, 327690, 8, 327718, 9, 327719, 0, 327720, 0, 327721, 0, 327722, 0, 327723, 8, 393220, 9, 393221, 0, 393222, 0, 393223, 0, 393224, 0, 393225, 0, 393226, 8, 393252, 11, 393253, 10, 393254, 6, 393255, 0, 393256, 0, 393257, 0, 393258, 0, 393259, 8, 458756, 13, 458757, 7, 458758, 4, 458759, 0, 458760, 0, 458761, 0, 458762, 8, 458788, 9, 458789, 0, 458790, 0, 458791, 0, 458792, 0, 458793, 0, 458794, 0, 458795, 8, 524294, 9, 524295, 0, 524296, 0, 524297, 0, 524298, 8, 524324, 13, 524325, 7, 524326, 4, 524327, 0, 524328, 0, 524329, 0, 524330, 0, 524331, 8, 589830, 9, 589831, 0, 589832, 0, 589833, 0, 589834, 8, 589862, 9, 589863, 0, 589864, 0, 589865, 0, 589866, 0, 589867, 8, 655366, 9, 655367, 0, 655368, 0, 655369, 0, 655370, 8, 655398, 9, 655399, 0, 655400, 0, 655401, 0, 655402, 0, 655403, 8, 720902, 9, 720903, 0, 720904, 0, 720905, 0, 720906, 8, 720934, 9, 720935, 0, 720936, 0, 720937, 0, 720938, 0, 720939, 8, 786438, 9, 786439, 0, 786440, 0, 786441, 0, 786442, 8, 786470, 9, 786471, 0, 786472, 0, 786473, 0, 786474, 0, 786475, 8, 851974, 9, 851975, 0, 851976, 0, 851977, 0, 851978, 8, 852006, 9, 852007, 0, 852008, 0, 852009, 0, 852010, 0, 852011, 8, 917510, 13, 917511, 7, 917512, 7, 917513, 7, 917514, 14, 917540, 11, 917541, 10, 917542, 6, 917543, 0, 917544, 0, 917545, 0, 917546, 0, 917547, 5, 917548, 10, 917549, 12, 983076, 9, 983077, 0, 983078, 0, 983079, 0, 983080, 0, 983081, 0, 983082, 0, 983083, 0, 983084, 0, 983085, 8, 1048612, 9, 1048613, 0, 1048614, 0, 1048615, 0, 1048616, 0, 1048617, 0, 1048618, 0, 1048619, 0, 1048620, 0, 1048621, 8, 1114148, 9, 1114149, 0, 1114150, 0, 1114151, 0, 1114152, 0, 1114153, 0, 1114154, 0, 1114155, 0, 1114156, 0, 1114157, 8, 1179684, 9, 1179685, 0, 1179686, 0, 1179687, 0, 1179688, 0, 1179689, 0, 1179690, 0, 1179691, 0, 1179692, 0, 1179693, 8, 1245220, 9, 1245221, 0, 1245222, 0, 1245223, 0, 1245224, 0, 1245225, 0, 1245226, 0, 1245227, 0, 1245228, 0, 1245229, 8, 1310756, 13, 1310757, 7, 1310758, 7, 1310759, 7, 1310762, 7, 1310763, 7, 1310764, 7, 1310765, 14 )
script/script = ExtResource( 2 )

[node name="Bodies" type="YSort" parent="."]

transform/pos = Vector2( 272.723, 410.109 )
sort/enabled = true

[node name="Enemies" type="Node" parent="Bodies"]

editor/display_folded = true

[node name="EnemyIce" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 176.177, 200.262 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_quantity = 60
auto_start = true

[node name="EnemyIce1" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 374.515, 73.9463 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = true

[node name="EnemyIce2" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 171.745, -178.685 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce3" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 173.961, -405.832 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce4" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 400, -344.89 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce5" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 590.582, -538.796 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce6" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 754.571, -340.458 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce7" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 876.454, -539.904 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce8" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 1040.44, -342.674 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce9" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 1200, -536.58 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce10" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 1427.15, -436.857 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce11" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 1200, -309.433 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce12" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 1424.93, -214.142 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce13" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 1197.78, -52.3694 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce14" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 1422.71, 102.755 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="EnemyIce15" parent="Bodies/Enemies" instance=ExtResource( 3 )]

transform/pos = Vector2( 1197.78, 234.611 )
wave_delay = 2.0
bullet_speed = 100.0
bullet_time = 5.0
bullet_quantity = 60
auto_start = false

[node name="Triggers" type="Node" parent="Bodies"]

editor/display_folded = true

[node name="Trigger1" type="StaticBody2D" parent="Bodies/Triggers"]

transform/pos = Vector2( 271.33, -25.7825 )
transform/scale = Vector2( 1, 1 )
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Area2D" type="Area2D" parent="Bodies/Triggers/Trigger1"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bodies/Triggers/Trigger1/Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Trigger2" type="StaticBody2D" parent="Bodies/Triggers"]

transform/pos = Vector2( 451.807, -430.936 )
transform/rot = 90.0
transform/scale = Vector2( 1, 1 )
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Area2D" type="Area2D" parent="Bodies/Triggers/Trigger2"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bodies/Triggers/Trigger2/Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Trigger3" type="StaticBody2D" parent="Bodies/Triggers"]

transform/pos = Vector2( 1071.81, -433.391 )
transform/rot = 90.0
transform/scale = Vector2( 1, 1 )
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Area2D" type="Area2D" parent="Bodies/Triggers/Trigger3"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bodies/Triggers/Trigger3/Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Trigger4" type="StaticBody2D" parent="Bodies/Triggers"]

transform/pos = Vector2( 1311.48, -347.473 )
transform/scale = Vector2( 1, 1 )
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Area2D" type="Area2D" parent="Bodies/Triggers/Trigger4"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bodies/Triggers/Trigger4/Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Trigger5" type="StaticBody2D" parent="Bodies/Triggers"]

transform/pos = Vector2( 1311.48, -89.7179 )
transform/scale = Vector2( 1, 1 )
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Area2D" type="Area2D" parent="Bodies/Triggers/Trigger5"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bodies/Triggers/Trigger5/Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Entrance" type="Node2D" parent="Bodies"]

[node name="HelpMessage" parent="Bodies" instance=ExtResource( 4 )]

transform/pos = Vector2( 172.853, 5.54019 )
message = "Run little Fairy"

[node name="Hero" parent="Bodies" instance=ExtResource( 5 )]

[node name="Portal" parent="Bodies" instance=ExtResource( 6 )]

transform/pos = Vector2( 1039.01, 237.967 )
transform/rot = 180.0
target_stage_path = "res://ending/win/goodend.tscn"

[node name="roof" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 1 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce" to="Bodies/Enemies/EnemyIce/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce1" to="Bodies/Enemies/EnemyIce1/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce2" to="Bodies/Enemies/EnemyIce2/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce3" to="Bodies/Enemies/EnemyIce3/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce4" to="Bodies/Enemies/EnemyIce4/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce5" to="Bodies/Enemies/EnemyIce5/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce6" to="Bodies/Enemies/EnemyIce6/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce7" to="Bodies/Enemies/EnemyIce7/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce8" to="Bodies/Enemies/EnemyIce8/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce9" to="Bodies/Enemies/EnemyIce9/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce10" to="Bodies/Enemies/EnemyIce10/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce11" to="Bodies/Enemies/EnemyIce11/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce12" to="Bodies/Enemies/EnemyIce12/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce13" to="Bodies/Enemies/EnemyIce13/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce14" to="Bodies/Enemies/EnemyIce14/DeathSFX" method="play"]

[connection signal="destroyed" from="Bodies/Enemies/EnemyIce15" to="Bodies/Enemies/EnemyIce15/DeathSFX" method="play"]

[connection signal="body_enter" from="Bodies/Triggers/Trigger1/Area2D" to="." method="_on_trigger1_body_enter"]

[connection signal="body_enter" from="Bodies/Triggers/Trigger2/Area2D" to="." method="_on_trigger2_body_enter"]

[connection signal="body_enter" from="Bodies/Triggers/Trigger3/Area2D" to="." method="_on_trigger3_body_enter"]

[connection signal="body_enter" from="Bodies/Triggers/Trigger4/Area2D" to="." method="_on_trigger4_body_enter"]

[connection signal="body_enter" from="Bodies/Triggers/Trigger5/Area2D" to="." method="_on_trigger5_body_enter"]


